--- a/Client/Users/Doc/DocExamFromTests/DocExamFromTests.xaml
+++ b/Client/Users/Doc/DocExamFromTests/DocExamFromTests.xaml
@@ -1,42 +1,67 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"       
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"       
-             x:Class="Client.Users.Doc.DocExamFromTests.DocExamFromTests"       
-          >
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Client.Users.Doc.DocExamFromTests.DocExamFromTests"
+             Loaded="ContentPage_Loaded">
     <ContentPage.Content>
         <AbsoluteLayout>
-            <Image Source="dotnet_bot.png"  
-                   AbsoluteLayout.LayoutFlags="PositionProportional"  
-                   AbsoluteLayout.LayoutBounds="1, 0, 50, 50" />
+            <Image Source="dotnet_bot.png"
+               AbsoluteLayout.LayoutFlags="PositionProportional"
+               AbsoluteLayout.LayoutBounds="1, 0, 50, 50" 
+     
+                   />
             <Grid AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <StackLayout Orientation="Vertical"    
-                             HorizontalOptions="FillAndExpand"    
-                             VerticalOptions="Start"    
-                             Margin="10"   
-                             Grid.Row="0">
-                    <Button Text="Экзамен"   
-                            WidthRequest="320"  
-                            Clicked="ExamButtonClicked" />
-                    <Button Text="Достижения"   
-                            WidthRequest="320"  
-                            Clicked="AchievementsButtonClicked" />
-                    <Button Text="Настройки"   
-                            WidthRequest="320"  
-                            Clicked="SettingsButtonClicked" />
+
+                <Label x:Name="NameUser"
+                   Text=""
+                   HorizontalOptions="End"
+                   VerticalOptions="Start"
+                   Margin="10"
+                   Grid.Row="0" 
+                />
+
+                <StackLayout 
+                       
+                      Grid.Row="0"
+                    Margin="0,150,0,0"
+                    >
+                    <Button Text="Экзамен"
+                        WidthRequest="320"
+                        Clicked="ExamButtonClicked"
+                  
+                        VerticalOptions="Start" 
+                        HorizontalOptions="CenterAndExpand" 
+                      Margin="0,10,0,0"
+                    />
+                    
+                    <Button Text="Достижения"
+                        WidthRequest="320"
+                        Clicked="AchievementsButtonClicked"
+                          VerticalOptions="Start" 
+                    HorizontalOptions="CenterAndExpand" 
+                               Margin="0,10,0,0" />
+                    <Button Text="Настройки"
+                        WidthRequest="320"
+                        Clicked="SettingsButtonClicked"
+                          VerticalOptions="Start" 
+                    HorizontalOptions="CenterAndExpand" 
+                            Margin="0,10,0,0" />
+                   
                 </StackLayout>
-                <Button   
-                Grid.Row="1"   
-                Text="Назад"   
-                Clicked="GoBack"   
-                VerticalOptions="End"   
-                HorizontalOptions="FillAndExpand"   
-                HeightRequest="50"   
-                Padding="10" />
+
+                <Button Grid.Row="3"
+                    Text="Назад"
+                    Clicked="GoBack"
+                    VerticalOptions="End"
+                    HorizontalOptions="FillAndExpand"
+                    HeightRequest="50"
+                    Padding="10"/>
             </Grid>
         </AbsoluteLayout>
     </ContentPage.Content>
