--- a/Client/Users/Doc/DocTestsFromQuestions/DocTestsFromQuestions.xaml
+++ b/Client/Users/Doc/DocTestsFromQuestions/DocTestsFromQuestions.xaml
@@ -3,10 +3,38 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Client.Users.Doc.DocTestsFromQuestions.DocTestsFromQuestions"
              Title="DocTestsFromQuestions">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <ContentPage.Content>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <ListView x:Name="TestList"
+                      ItemSelected="OnItemSelected"
+                      ItemsSource="{Binding ExamsTest}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="2*" />
+                                </Grid.ColumnDefinitions>
+                                <Label Text="{Binding ExamsTest.Test.Name_Test}" Grid.Column="0"
+                                        FontSize="16"
+                                        FontFamily="Arial"
+                                        FontAttributes="Bold"
+                                        TextColor="Red"
+                                        HorizontalTextAlignment="Center"
+                                        VerticalTextAlignment="Center" />
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <Button Text="Назад"
+                    Clicked="GoBack" Grid.Row="1" />
+        </Grid>
+    </ContentPage.Content>
 </ContentPage>
