--- a/Client/Users/Doc/DocTestsFromQuestions/DocTestsFromQuestions.xaml
+++ b/Client/Users/Doc/DocTestsFromQuestions/DocTestsFromQuestions.xaml
@@ -11,6 +11,7 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <ListView x:Name="TestList"
+                      RowHeight="50"
                       ItemSelected="OnItemSelected"
                       ItemsSource="{Binding ExamsTest}">
                 <ListView.ItemTemplate>
