--- a/Client/Users/Doc/DocAnswerQuestins/DocAnswerQuestins.xaml
+++ b/Client/Users/Doc/DocAnswerQuestins/DocAnswerQuestins.xaml
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Client.Users.Doc.DocAnswerQuestins.DocAnswerQuestins"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             x:Class="Client.Users.Doc.DocAnswerQuestins.DocAnswerQuestins" 
              Title="Ответы">
 
-    
     <ContentPage.Content>
-        <Grid >
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <!-- Добавленная строка для label -->
-                <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Label x:Name="Users" Text="Мой Label" Grid.Row="0" 
-                                        FontSize="16"   
-                                        FontFamily="Arial"   
-                                        FontAttributes="Bold"   
-                                        TextColor="Green"   
-                                            />
-            <!-- Добавленная label -->
-            <!--<Frame Padding="10" BackgroundColor="White" CornerRadius="3" Margin="0,-20,0,0"> 
-            </Frame>-->
-            <ListView x:Name="QuestionList"    
-                      RowHeight="30"
-                      ItemSelected="OnItemSelected"   
-                      ItemsSource="{Binding QuestionAnswers}" Margin="0,20,0,0" >
+            <Label x:Name="Users" Text="Мой Label" Grid.Row="0"  
+                   FontSize="16"    
+                   FontFamily="Arial"    
+                   FontAttributes="Bold"    
+                   TextColor="Green"    
+            />
+
+            <Label Text="Ответы" Grid.Row="1"  
+                   FontSize="20"    
+                   FontFamily="Arial"    
+                   FontAttributes="Bold"    
+                   TextColor="Purple"    
+                   HorizontalTextAlignment="Center"    
+                   VerticalTextAlignment="Center" />
+
+            <ListView x:Name="QuestionList"     
+                      Grid.Row="2" 
+                      RowHeight="30" 
+                      ItemSelected="OnItemSelected"    
+                      ItemsSource="{Binding QuestionAnswers}" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
-                                    <!-- Ширина в 2/3 -->
-                                    <!--<ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="*" />-->
                                 </Grid.ColumnDefinitions>
-                                <Label Text="{Binding QuestionAnswer.Answer.AnswerOptions}" Grid.Column="0"   
-                                        FontSize="16"   
-                                        FontFamily="Arial"   
-                                        FontAttributes="Bold"   
-                                        TextColor="Red"   
-                                        HorizontalTextAlignment="Center"   
-                                        VerticalTextAlignment="Center" />
+                                <Label Text="{Binding QuestionAnswer.Answer.AnswerOptions}" Grid.Column="0"    
+                                       FontSize="16"    
+                                       FontFamily="Arial"    
+                                       FontAttributes="Bold"    
+                                       TextColor="Red"    
+                                       HorizontalTextAlignment="Center"    
+                                       VerticalTextAlignment="Center" />
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
 
-            <Button Text="Назад"     
+            <Button Text="Назад"      
                     Clicked="GoBack" Grid.Row="3" />
         </Grid>
     </ContentPage.Content>
