--- a/Client/Users/Doc/DocPersonalCabinet/DocPersonalCabinet.xaml
+++ b/Client/Users/Doc/DocPersonalCabinet/DocPersonalCabinet.xaml
@@ -1,12 +1,44 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Client.Users.Doc.DocPersonalCabinet.DocPersonalCabinet"
+    <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             x:Class="Client.Users.Doc.DocPersonalCabinet.DocPersonalCabinet" 
+              xmlns:controls="clr-namespace:Client.Controls"
              Title="DocPersonalCabinet">
-    <VerticalStackLayout>
-        <Label 
+
+        <StackLayout>
+        <Label
             Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
+            VerticalOptions="Center"
             HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+        <CollectionView ItemsSource="{Binding Data}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="{Binding Label}" 
+                               FontSize="16"
+                               VerticalOptions="Center"/>
+
+                        <Label Text="{Binding Value}"
+                               FontSize="16"
+                               VerticalOptions="Center"
+                               HorizontalOptions="EndAndExpand"/>
+                    </StackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+        <controls:RadialBarChart
+                BarSpacing="16"
+                BarThickness="10" 
+                HeightRequest="300"   
+                FontSize="12"
+                BarBackgroundColor="Transparent"
+                ShowLabels="True"
+                LabelFormat="{}{0}:  {1}%"
+                Entries="{Binding .}"
+            />
+
+        <!--<charts:ChartView x:Name="chartView" HeightRequest="300" WidthRequest="300" />-->
+    </StackLayout>
+
 </ContentPage>
