--- a/Client/Users/Main/Users.xaml
+++ b/Client/Users/Main/Users.xaml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Client.Users.Doc.DocExamFromTests.DocExamFromTests"
+             x:Class="Client.Users.Users"
              Loaded="ContentPage_Loaded">
+    
+
     <ContentPage.Content>
         <AbsoluteLayout>
             <Image Source="dotnet_bot.png"
