--- a/Client/AppShell.xaml
+++ b/Client/AppShell.xaml
@@ -57,9 +57,9 @@
         </Tab>
     </FlyoutItem>-->
 
-    <MenuItem Text="Help"
+    <!--<MenuItem Text="Help"
               IconImageSource="help.png"
               Command="{Binding HelpCommand}"
-              CommandParameter="https://docs.microsoft.com/dotnet/maui/fundamentals/shell" />
+              CommandParameter="https://docs.microsoft.com/dotnet/maui/fundamentals/shell" />-->
 
 </Shell>
