--- a/Client/Users/Main/Users.xaml
+++ b/Client/Users/Main/Users.xaml
@@ -41,6 +41,14 @@
                         HorizontalOptions="CenterAndExpand" 
                       Margin="0,10,0,0"
                     />
+                    
+                    <Button Text="Статистика"
+                        WidthRequest="320"
+                        Clicked="Statictick_Users"
+                          VerticalOptions="Start" 
+                    HorizontalOptions="CenterAndExpand" 
+                               Margin="0,10,0,0" />
+
 
                     <Button Text="Достижения"
                         WidthRequest="320"
