--- a/Client/Users/Doc/DocPersonalAchievement/DocPersonalAchievement.xaml
+++ b/Client/Users/Doc/DocPersonalAchievement/DocPersonalAchievement.xaml
@@ -2,11 +2,60 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Client.Users.Doc.DocPersonalAchievement.DocPersonalAchievement"
-             Title="DocPersonalAchievement">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:controls="clr-namespace:Client.Controls">
+
+    <ContentPage.Content>
+
+        <StackLayout VerticalOptions="FillAndExpand">
+
+        <CollectionView ItemsSource="{Binding Data}">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="{Binding Label}"
+                               FontSize="16"
+                               VerticalOptions="Center"/>
+
+                        <Label Text="{Binding Value}"
+                               FontSize="16"
+                               VerticalOptions="Center"
+                               HorizontalOptions="EndAndExpand"/>
+                    </StackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
+             <controls:RadialBarChart
+                BarSpacing="16"
+                BarThickness="10"
+                HeightRequest="300"
+                FontSize="12"
+               
+                BarBackgroundColor="Transparent"
+                ShowLabels="True"
+                LabelFormat="{}{0}: {1}%"
+                Entries="{Binding .}"/>
+
+
+
+
+
+            <Grid VerticalOptions="FillAndExpand" >
+
+                <Button 
+                    Text="Назад"
+                 Clicked="GoBack"
+                VerticalOptions="End"
+                HorizontalOptions="FillAndExpand"
+                HeightRequest="50"
+               
+                FontSize="16"/>
+            </Grid>
+
+
+        </StackLayout>
+    
+   
+    </ContentPage.Content>
+
 </ContentPage>
