--- a/Client/Users/Doc/DocStatisticsUserResult/DocStatisticsUserResult.xaml
+++ b/Client/Users/Doc/DocStatisticsUserResult/DocStatisticsUserResult.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
              x:Class="Client.Users.Doc.DocStatisticsUserResult.DocStatisticsUserResult"  
-             Title="Статистика экзаменов">
+            >
     <ContentPage.Content>
 
         <Grid>
@@ -20,6 +20,16 @@
                     </Grid.ColumnDefinitions>
                 </Grid>
             </ScrollView>
+            
+            
+            
+            <Button Grid.Row="3"
+                    Text="Назад"
+                    Clicked="GoBack"
+                    VerticalOptions="End"
+                    HorizontalOptions="FillAndExpand"
+                    HeightRequest="50"
+                    Padding="10"/>
         </Grid>
 
     </ContentPage.Content>
