--- a/Client/MainPage.xaml
+++ b/Client/MainPage.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"  
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
-             x:Class="Client.MainPage" 
-             Title="Вход в учетную запись"
-             Loaded="ContentPage_Loaded"> 
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"     
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"     
+             x:Class="Client.MainPage"    
+             Title="Вход в учетную запись"   
+             Loaded="ContentPage_Loaded"  
+             BackgroundColor="{DynamicResource PageBackgroundColor}">
 
     <ScrollView>
         <Grid Padding="20">
@@ -13,50 +14,58 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Border Stroke="Gray" BackgroundColor="White" HorizontalOptions="CenterAndExpand" Grid.Row="1">
+            <Border Stroke="{DynamicResource BorderColor}" BackgroundColor="{DynamicResource CardBackgroundColor}" HorizontalOptions="CenterAndExpand" Grid.Row="1">
                 <Border.StrokeShape>
                     <RoundRectangle CornerRadius="20" />
                 </Border.StrokeShape>
                 <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Padding="20">
-                    <Entry x:Name="nameEntry9"
-                           FontSize="22"
-                           Placeholder="Введите электроную почту"
-                           Keyboard="Email"
-                           HeightRequest="60"
-                           HorizontalOptions="FillAndExpand"
-                           TextChanged="nameEntry9_TextChanged"/>
+                    <Entry x:Name="nameEntry9"   
+                           FontSize="22"   
+                           Placeholder="Введите электронную почту"   
+                           Keyboard="Email"   
+                           HeightRequest="60"   
+                           HorizontalOptions="FillAndExpand"   
+                           TextChanged="nameEntry9_TextChanged"  
+                           BackgroundColor="{DynamicResource EntryBackgroundColor}"  
+                           TextColor="{DynamicResource EntryTextColor}"/>
 
-                    <Entry x:Name="nameEntry1"
-                           FontSize="22"
-                           Placeholder="Введите пароль"
-                           HeightRequest="60"
-                           HorizontalOptions="FillAndExpand"
-                           TextChanged="nameEntry1_TextChanged"
-                           Keyboard="Text"/>
+                    <Entry x:Name="nameEntry1"   
+                           FontSize="22"   
+                           Placeholder="Введите пароль"   
+                           HeightRequest="60"   
+                           HorizontalOptions="FillAndExpand"   
+                           TextChanged="nameEntry1_TextChanged"   
+                           Keyboard="Text"  
+                           IsPassword="{DynamicResource IsPasswordEntry}"  
+                           BackgroundColor="{DynamicResource EntryBackgroundColor}"  
+                           TextColor="{DynamicResource EntryTextColor}"/>
 
                     <StackLayout VerticalOptions="CenterAndExpand" Margin="30, 40">
-                        <Button x:Name ="CounterLog"
-                                Text ="Войти"
-                                SemanticProperties.Hint ="Counts the number of times you click"
-                                Clicked ="CounterLog_Clicked"
-                                VerticalOptions="CenterAndExpand"
-                                HorizontalOptions ="FillAndExpand"
-                                FontSize="18"
-                                HeightRequest="60" />
+                        <Button x:Name ="CounterLog"   
+                                Text ="Войти"   
+                                SemanticProperties.Hint ="Counts the number of times you click"   
+                                Clicked ="CounterLog_Clicked"   
+                                VerticalOptions="CenterAndExpand"   
+                                HorizontalOptions ="FillAndExpand"   
+                                FontSize="18"   
+                                HeightRequest="60"  
+                                BackgroundColor="{DynamicResource ButtonBackgroundColor}"  
+                                TextColor="{DynamicResource ButtonTextColor}"/>
 
-                        <Button x:Name ="CounterBtn"
-                                Text ="Регистрация"
-                                SemanticProperties.Hint ="Counts the number of times you click"
-                                Clicked ="CounterBtn_Clicked_1"
-                                VerticalOptions="CenterAndExpand"
-                                HorizontalOptions ="FillAndExpand"
-                                FontSize="18"
-                                HeightRequest="60"
-                                Margin="0, 20, 0, 0" />
+                        <Button x:Name ="CounterBtn"   
+                                Text ="Регистрация"   
+                                SemanticProperties.Hint ="Counts the number of times you click"   
+                                Clicked ="CounterBtn_Clicked_1"   
+                                VerticalOptions="CenterAndExpand"   
+                                HorizontalOptions ="FillAndExpand"   
+                                FontSize="18"   
+                                HeightRequest="60"   
+                                Margin="0, 20, 0, 0"  
+                                BackgroundColor="{DynamicResource ButtonBackgroundColor}"  
+                                TextColor="{DynamicResource ButtonTextColor}"/>
                     </StackLayout>
                 </StackLayout>
             </Border>
         </Grid>
     </ScrollView>
-
 </ContentPage>
