--- a/Client/Users/Main/Users.xaml
+++ b/Client/Users/Main/Users.xaml
@@ -3,75 +3,76 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Client.Users.Users"
              Loaded="ContentPage_Loaded">
-    
 
     <ContentPage.Content>
-        <AbsoluteLayout>
+        <AbsoluteLayout BackgroundColor="{DynamicResource PageBackground}">
             <Image Source="dotnet_bot.png"
-               AbsoluteLayout.LayoutFlags="PositionProportional"
-               AbsoluteLayout.LayoutBounds="1, 0, 50, 50" 
-     
-                   />
+                   AbsoluteLayout.LayoutFlags="PositionProportional"
+                   AbsoluteLayout.LayoutBounds="1, 0, 50, 50" />
+
             <Grid AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0, 0, 1, 1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <Label x:Name="NameUser"
-                   Text=""
-                   HorizontalOptions="End"
-                   VerticalOptions="Start"
-                   Margin="10"
-                   Grid.Row="0" 
-                />
+                       Text=""
+                       HorizontalOptions="End"
+                       VerticalOptions="Start"
+                       Margin="10"
+                       Grid.Row="0"
+                       TextColor="{DynamicResource LabelColor}" />
 
-                <StackLayout 
-                       
-                      Grid.Row="0"
-                    Margin="0,150,0,0"
-                    >
-                    <Button Text="Экзамен"
-                        WidthRequest="320"
-                        Clicked="ExamButtonClicked"
-                  
-                        VerticalOptions="Start" 
-                        HorizontalOptions="CenterAndExpand" 
-                      Margin="0,10,0,0"
-                    />
-                    
-                    <Button Text="Статистика"
-                        WidthRequest="320"
-                        Clicked="Statictick_Users"
-                          VerticalOptions="Start" 
-                    HorizontalOptions="CenterAndExpand" 
-                               Margin="0,10,0,0" />
+                <StackLayout Grid.Row="1"
+                             Margin="0,150,0,0">
+                    <Button x:Name="ExamButton"
+                            Text="Экзамен"
+                            WidthRequest="320"
+                            Clicked="ExamButtonClicked"
+                            VerticalOptions="Start"
+                            HorizontalOptions="CenterAndExpand"
+                            Margin="0,10,0,0"
+                            Style="{DynamicResource ButtonStyle}" />
 
+                    <Button x:Name="StatictickButton"
+                            Text="Статистика"
+                            WidthRequest="320"
+                            Clicked="Statictick_Users"
+                            VerticalOptions="Start"
+                            HorizontalOptions="CenterAndExpand"
+                            Margin="0,10,0,0"
+                            Style="{DynamicResource ButtonStyle}" />
 
-                    <Button Text="Достижения"
-                        WidthRequest="320"
-                        Clicked="AchievementsButtonClicked"
-                          VerticalOptions="Start" 
-                    HorizontalOptions="CenterAndExpand" 
-                               Margin="0,10,0,0" />
-                    <Button Text="Настройки"
-                        WidthRequest="320"
-                        Clicked="SettingsButtonClicked"
-                          VerticalOptions="Start" 
-                    HorizontalOptions="CenterAndExpand" 
-                            Margin="0,10,0,0" />
+                    <Button x:Name="AchievementsButton"
+                            Text="Достижения"
+                            WidthRequest="320"
+                            Clicked="AchievementsButtonClicked"
+                            VerticalOptions="Start"
+                            HorizontalOptions="CenterAndExpand"
+                            Margin="0,10,0,0"
+                            Style="{DynamicResource ButtonStyle}" />
 
+                    <Button x:Name="SettingsButton"
+                            Text="Настройки"
+                            WidthRequest="320"
+                            Clicked="SettingsButtonClicked"
+                            VerticalOptions="Start"
+                            HorizontalOptions="CenterAndExpand"
+                            Margin="0,10,0,0"
+                            Style="{DynamicResource ButtonStyle}" />
                 </StackLayout>
 
                 <Button Grid.Row="3"
-                    Text="Назад"
-                    Clicked="GoBack"
-                    VerticalOptions="End"
-                    HorizontalOptions="FillAndExpand"
-                    HeightRequest="50"
-                    Padding="10"/>
+                        Text="Назад"
+                        Clicked="GoBack"
+                        VerticalOptions="End"
+                        HorizontalOptions="FillAndExpand"
+                        HeightRequest="50"
+                        Padding="10"
+                        Style="{DynamicResource ButtonStyle}" />
             </Grid>
         </AbsoluteLayout>
     </ContentPage.Content>
